# run-on-courseB

./: .gitignore  CMakeLists.txt  Doxyfile  line_tracer.cpp
docs/html/: annotated.html  classSerial-members.html  classSerial.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  line__tracer_8cpp.html  line__tracer_8cpp__incl.map  line__tracer_8cpp__incl.md5  serial_8cpp.html  serial_8cpp__incl.map  serial_8cpp__incl.md5  serial_8hpp_source.html
docs/html/search/: all_1.js  all_2.js  all_3.js  files_1.js  functions_0.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js
docs/latex/: annotated.tex  classSerial.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  line__tracer_8cpp.tex  line__tracer_8cpp__incl.md5  refman.tex  serial_8cpp.tex  serial_8cpp__incl.md5
include/: detect_color.hpp  serial.hpp
src/: detect_color.cpp  line_tracer.cpp  line_tracer_sugata.cpp  serial.cpp
test/: CMakeLists.txt  test.cpp
test/detect_color/: CMakeLists.txt  test_detect_color.cpp
test/detect_color/result/: resize.sh
